crates/aven-check/tests/fixtures/check/invalid/open-record-missing-field.av
missingName : { .._, name: Text } = { age: 36 }
